create user model and rake tasks

--- a/sinatra_portfolio_creator/Rakefile
+++ b/sinatra_portfolio_creator/Rakefile
@@ -2,3 +2,11 @@ ENV["SINATRA_ENV"] ||= "development"
 
 require_relative './config/environment'
 require 'sinatra/activerecord/rake'
+
+task :env do
+  require_relative './config/environment'
+end
+
+task :console => :env do
+  Pry.start
+end
